fix long string out of bound issue

--- a/web/ui/src/features/river-js/RiverValue.module.css
+++ b/web/ui/src/features/river-js/RiverValue.module.css
@@ -12,8 +12,7 @@
 
 .value span.string {
   color: green;
-  width: 100%;
-  word-wrap: break-word;
+  
 }
 
 .value span.special {
